[gd_scene load_steps=15 format=3 uid="uid://bmatdeo4obw8y"]

[ext_resource type="Script" uid="uid://epfgkb27hns2" path="res://scripts/fase3.gd" id="1_qt4wc"]
[ext_resource type="Texture2D" uid="uid://j1dkag08escd" path="res://Assets/img/fase_3_fundo.png" id="2_mtfx8"]
[ext_resource type="AudioStream" uid="uid://ma6765oscgs4" path="res://Assets/musics/the_price_is_right_ding.mp3" id="3_rk7hk"]
[ext_resource type="AudioStream" uid="uid://buam2fhyk8321" path="res://Assets/musics/error_CDOxCYm.mp3" id="4_cdxkg"]
[ext_resource type="Texture2D" uid="uid://dtrfmsg2klkou" path="res://Assets/img/tileset.png" id="4_pgpv6"]
[ext_resource type="PackedScene" uid="uid://dhtujwolyp3nj" path="res://Cenas/jogador.tscn" id="4_qt4wc"]
[ext_resource type="Script" uid="uid://ces00s8lvr5ds" path="res://scripts/colisaoopcao.gd" id="5_qt4wc"]
[ext_resource type="Script" uid="uid://ffp3qchjmej2" path="res://Cenas/colisaoopcao2.gd" id="6_kg7lx"]
[ext_resource type="Script" uid="uid://btjpc35w12c1r" path="res://Cenas/queda.gd" id="7_rk7hk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8tjhp"]
texture = ExtResource("4_pgpv6")
0:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
8:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
0:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.4749146, 8, 3.956892, 4.856186, 8, 5.3957634, 8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -0.71943474, 5.5756207, 4.856186, 5.5756207, 8, 8)
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
0:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
0:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
9:6/0 = 0
10:6/0 = 0
12:6/0 = 0
13:6/0 = 0
0:7/0 = 0
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 6.6547737, 8, 8, 8, -8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
13:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
0:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
0:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
0:11/0 = 0

[sub_resource type="TileSet" id="TileSet_qt4wc"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_8tjhp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qt4wc"]
size = Vector2(45, 95)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kg7lx"]
size = Vector2(56, 82.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdxkg"]
size = Vector2(1153, 224)

[node name="Fase3" type="Node2D"]
script = ExtResource("1_qt4wc")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = -5.0
offset_top = -217.0
offset_right = 1151.0
offset_bottom = 807.0
texture = ExtResource("2_mtfx8")
expand_mode = 1

[node name="musicaAmbiente" type="AudioStreamPlayer2D" parent="."]
position = Vector2(104, 556)

[node name="somDeAcerto" type="AudioStreamPlayer2D" parent="."]
position = Vector2(104, 545)
stream = ExtResource("3_rk7hk")

[node name="somDeErro" type="AudioStreamPlayer2D" parent="."]
position = Vector2(72, 517)
stream = ExtResource("4_cdxkg")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_qt4wc")
format = 2
layer_0/tile_data = PackedInt32Array(2752513, 196608, 10, 2818049, 196608, 9, 2883585, 196608, 10, 2949121, 196608, 9, 3014657, 196608, 10, 3080193, 131072, 10, 3145729, 131072, 8, 3211265, 131072, 9, 2555905, 196608, 9, 2621441, 196608, 10, 2686977, 196608, 9, 2359297, 196608, 10, 2424833, 196608, 9, 2490369, 196608, 10, 2293761, 196608, 9, 2228225, 131072, 7, 2228226, 196608, 7, 2228227, 262144, 7, 2228228, 327680, 7, 2228229, 393216, 7, 2228230, 458752, 7, 2228231, 524288, 7, 2228232, 196608, 7, 2228233, 262144, 7, 2228234, 327680, 7, 2228235, 393216, 7, 2228236, 458752, 7, 2228237, 524288, 7, 2228238, 196608, 7, 2228239, 262144, 7, 2228240, 327680, 7, 2228241, 393216, 7, 2228242, 458752, 7, 2228243, 196608, 7, 2228244, 262144, 7, 2228245, 327680, 7, 2228246, 393216, 7, 2228247, 458752, 7, 2228248, 524288, 7, 2162717, 393216, 4, 2228253, 393216, 5, 2162718, 458752, 4, 2228254, 458752, 5, 2162725, 393216, 4, 2228261, 393216, 5, 2162726, 458752, 4, 2228262, 458752, 5, 2293789, 196608, 4, 2359325, 196608, 5, 2293790, 262144, 4, 2359326, 262144, 5, 2293797, 196608, 4, 2359333, 196608, 5, 2293798, 262144, 4, 2359334, 262144, 5, 2293762, 262144, 9, 2359298, 262144, 10, 2293763, 327680, 9, 2359299, 327680, 10, 2293764, 393216, 9, 2359300, 393216, 10, 2293765, 458752, 9, 2359301, 458752, 10, 2293766, 524288, 9, 2359302, 524288, 10, 2293767, 589824, 9, 2359303, 589824, 10, 2293768, 655360, 9, 2359304, 655360, 10, 2293769, 262144, 9, 2359305, 262144, 10, 2293770, 327680, 9, 2359306, 327680, 10, 2293771, 393216, 9, 2359307, 393216, 10, 2293772, 458752, 9, 2359308, 458752, 10, 2293773, 524288, 9, 2359309, 524288, 10, 2293774, 589824, 9, 2359310, 589824, 10, 2293775, 655360, 9, 2359311, 655360, 10, 2424841, 262144, 9, 2490377, 262144, 10, 2424842, 327680, 9, 2490378, 327680, 10, 2424843, 393216, 9, 2490379, 393216, 10, 2424844, 458752, 9, 2490380, 458752, 10, 2424845, 524288, 9, 2490381, 524288, 10, 2424846, 589824, 9, 2490382, 589824, 10, 2424847, 655360, 9, 2490383, 655360, 10, 2555913, 262144, 9, 2621449, 262144, 10, 2555914, 327680, 9, 2621450, 327680, 10, 2555915, 393216, 9, 2621451, 393216, 10, 2555916, 458752, 9, 2621452, 458752, 10, 2555917, 524288, 9, 2621453, 524288, 10, 2555918, 589824, 9, 2621454, 589824, 10, 2555919, 655360, 9, 2621455, 655360, 10, 2686985, 262144, 9, 2752521, 262144, 10, 2686986, 327680, 9, 2752522, 327680, 10, 2686987, 393216, 9, 2752523, 393216, 10, 2686988, 458752, 9, 2752524, 458752, 10, 2686989, 524288, 9, 2752525, 524288, 10, 2686990, 589824, 9, 2752526, 589824, 10, 2686991, 655360, 9, 2752527, 655360, 10, 2818057, 262144, 9, 2883593, 262144, 10, 2818058, 327680, 9, 2883594, 327680, 10, 2818059, 393216, 9, 2883595, 393216, 10, 2818060, 458752, 9, 2883596, 458752, 10, 2818061, 524288, 9, 2883597, 524288, 10, 2818062, 589824, 9, 2883598, 589824, 10, 2818063, 655360, 9, 2883599, 655360, 10, 2818050, 262144, 9, 2883586, 262144, 10, 2818051, 327680, 9, 2883587, 327680, 10, 2818052, 393216, 9, 2883588, 393216, 10, 2818053, 458752, 9, 2883589, 458752, 10, 2818054, 524288, 9, 2883590, 524288, 10, 2818055, 589824, 9, 2883591, 589824, 10, 2818056, 655360, 9, 2883592, 655360, 10, 2686978, 196608, 9, 2752514, 196608, 10, 2686979, 327680, 9, 2752515, 327680, 10, 2686980, 393216, 9, 2752516, 393216, 10, 2686981, 458752, 9, 2752517, 458752, 10, 2686982, 524288, 9, 2752518, 524288, 10, 2686983, 589824, 9, 2752519, 589824, 10, 2686984, 655360, 9, 2752520, 655360, 10, 2555906, 196608, 9, 2621442, 196608, 10, 2555907, 327680, 9, 2621443, 327680, 10, 2555908, 393216, 9, 2621444, 393216, 10, 2555909, 458752, 9, 2621445, 458752, 10, 2555910, 524288, 9, 2621446, 524288, 10, 2555911, 589824, 9, 2621447, 589824, 10, 2555912, 655360, 9, 2621448, 655360, 10, 2424834, 262144, 9, 2490370, 262144, 10, 2424835, 327680, 9, 2490371, 327680, 10, 2424836, 393216, 9, 2490372, 393216, 10, 2424837, 458752, 9, 2490373, 458752, 10, 2424838, 524288, 9, 2490374, 524288, 10, 2424839, 589824, 9, 2490375, 589824, 10, 2424840, 655360, 9, 2490376, 655360, 10, 2949122, 262144, 9, 3014658, 262144, 10, 2949123, 327680, 9, 3014659, 327680, 10, 2949124, 393216, 9, 3014660, 393216, 10, 2949125, 458752, 9, 3014661, 458752, 10, 2949126, 524288, 9, 3014662, 524288, 10, 2949127, 589824, 9, 3014663, 589824, 10, 2949128, 655360, 9, 3014664, 655360, 10, 3080194, 262144, 9, 3145730, 262144, 10, 3080195, 327680, 9, 3145731, 327680, 10, 3080196, 262144, 9, 3145732, 262144, 10, 3080197, 327680, 9, 3145733, 262144, 9, 3080198, 393216, 9, 3145734, 327680, 9, 3080199, 458752, 9, 3145735, 393216, 9, 3080200, 524288, 9, 3145736, 458752, 9, 3080201, 589824, 9, 3145737, 524288, 9, 3080202, 655360, 9, 3145738, 589824, 9, 3080203, 262144, 9, 3145739, 655360, 9, 3080204, 327680, 9, 3145740, 262144, 9, 3080205, 393216, 9, 3145741, 327680, 9, 3080206, 458752, 9, 3145742, 393216, 9, 3080207, 524288, 9, 3145743, 458752, 9, 2949129, 262144, 9, 3014665, 262144, 10, 2949130, 327680, 9, 3014666, 327680, 10, 2949131, 393216, 9, 3014667, 393216, 10, 2949132, 458752, 9, 3014668, 458752, 10, 2949133, 524288, 9, 3014669, 524288, 10, 2949134, 589824, 9, 3014670, 589824, 10, 2949135, 655360, 9, 3014671, 655360, 10, 2949136, 262144, 9, 3014672, 262144, 10, 2949137, 327680, 9, 3014673, 327680, 10, 2949138, 262144, 9, 3014674, 262144, 10, 2949139, 327680, 9, 3014675, 327680, 10, 2949140, 393216, 9, 3014676, 393216, 10, 2949141, 458752, 9, 3014677, 458752, 10, 2949142, 524288, 9, 3014678, 524288, 10, 2818064, 262144, 9, 2883600, 262144, 10, 2818065, 327680, 9, 2883601, 327680, 10, 2818066, 262144, 9, 2883602, 262144, 10, 2818067, 327680, 9, 2883603, 327680, 10, 2818068, 393216, 9, 2883604, 393216, 10, 2818069, 458752, 9, 2883605, 458752, 10, 2818070, 524288, 9, 2883606, 524288, 10, 2686992, 262144, 9, 2752528, 262144, 10, 2686993, 327680, 9, 2752529, 327680, 10, 2686994, 262144, 9, 2752530, 262144, 10, 2686995, 327680, 9, 2752531, 327680, 10, 2686996, 393216, 9, 2752532, 393216, 10, 2686997, 458752, 9, 2752533, 458752, 10, 2686998, 524288, 9, 2752534, 524288, 10, 2555920, 262144, 9, 2621456, 262144, 10, 2555921, 327680, 9, 2621457, 327680, 10, 2555922, 262144, 9, 2621458, 262144, 10, 2555923, 327680, 9, 2621459, 327680, 10, 2555924, 393216, 9, 2621460, 393216, 10, 2555925, 458752, 9, 2621461, 458752, 10, 2555926, 524288, 9, 2621462, 524288, 10, 2424848, 262144, 9, 2490384, 262144, 10, 2424849, 327680, 9, 2490385, 327680, 10, 2424850, 262144, 9, 2490386, 262144, 10, 2424851, 327680, 9, 2490387, 327680, 10, 2424852, 393216, 9, 2490388, 393216, 10, 2424853, 458752, 9, 2490389, 458752, 10, 2424854, 524288, 9, 2490390, 524288, 10, 2293776, 262144, 9, 2359312, 262144, 10, 2293777, 327680, 9, 2359313, 327680, 10, 2293778, 262144, 9, 2359314, 262144, 10, 2293779, 327680, 9, 2359315, 327680, 10, 2293780, 393216, 9, 2359316, 393216, 10, 2293781, 458752, 9, 2359317, 458752, 10, 2293782, 524288, 9, 2359318, 524288, 10, 2293783, 589824, 9, 2359319, 589824, 10, 2293784, 655360, 9, 2359320, 655360, 10, 2424855, 589824, 9, 2490391, 589824, 10, 2424856, 655360, 9, 2490392, 655360, 10, 2555927, 589824, 9, 2621463, 589824, 10, 2555928, 655360, 9, 2621464, 655360, 10, 2686999, 589824, 9, 2752535, 589824, 10, 2687000, 655360, 9, 2752536, 655360, 10, 2818071, 589824, 9, 2883607, 589824, 10, 2818072, 655360, 9, 2883608, 655360, 10, 2949143, 589824, 9, 3014679, 589824, 10, 2949144, 655360, 9, 3014680, 655360, 10, 3080210, 262144, 9, 3145746, 655360, 9, 3080211, 327680, 9, 3145747, 327680, 10, 3080212, 393216, 9, 3145748, 393216, 10, 3080213, 458752, 9, 3145749, 458752, 10, 3080214, 524288, 9, 3145750, 524288, 10, 3080215, 589824, 9, 3145751, 589824, 10, 3080216, 655360, 9, 3145752, 655360, 10, 3211282, 655360, 10, 3276818, 262144, 10, 3211283, 327680, 9, 3276819, 327680, 10, 3211284, 393216, 9, 3276820, 393216, 10, 3211285, 458752, 9, 3276821, 458752, 10, 3211286, 524288, 9, 3276822, 524288, 10, 3211287, 589824, 9, 3276823, 589824, 10, 3211288, 655360, 9, 3276824, 655360, 10, 3080208, 589824, 9, 3145744, 524288, 9, 3080209, 655360, 9, 3145745, 589824, 9, 3211271, 393216, 10, 3211272, 458752, 10, 3211273, 524288, 10, 3211274, 589824, 10, 3211275, 655360, 10, 3211276, 262144, 10, 3211277, 327680, 10, 3211278, 393216, 10, 3211279, 458752, 10, 3211280, 524288, 10, 3211281, 589824, 10, 3211269, 262144, 10, 3211270, 327680, 10, 2228249, 851968, 7, 2293785, 851968, 8, 2359321, 851968, 9, 2424857, 851968, 10, 2490393, 851968, 8, 2555929, 851968, 9, 2621465, 851968, 10, 2687001, 851968, 8, 2752537, 851968, 9, 2818073, 851968, 10, 2883609, 851968, 8, 2949145, 851968, 9, 3014681, 851968, 10, 2228270, 131072, 7, 2293806, 131072, 8, 2359342, 131072, 9, 2424878, 131072, 10, 2490414, 131072, 8, 2555950, 131072, 9, 2621486, 131072, 10, 2687022, 131072, 8, 2752558, 131072, 9, 2818094, 131072, 10, 2883630, 131072, 8, 2949166, 131072, 9, 3014702, 131072, 10, 2293807, 196608, 8, 2359343, 196608, 9, 2424879, 262144, 9, 2293808, 262144, 8, 2359344, 262144, 9, 2424880, 327680, 9, 2293809, 327680, 8, 2359345, 327680, 9, 2424881, 393216, 9, 2293810, 393216, 8, 2359346, 393216, 9, 2424882, 458752, 9, 2293811, 458752, 8, 2359347, 458752, 9, 2424883, 524288, 9, 2293812, 524288, 8, 2359348, 524288, 9, 2424884, 589824, 9, 2293813, 589824, 8, 2359349, 589824, 9, 2424885, 655360, 9, 2293814, 655360, 8, 2359350, 655360, 9, 2424886, 720896, 9, 2293815, 720896, 8, 2359351, 720896, 9, 2424887, 262144, 9, 2293816, 786432, 8, 2359352, 786432, 9, 2424888, 327680, 9, 2293817, 196608, 8, 2359353, 196608, 9, 2424889, 393216, 9, 2293818, 262144, 8, 2359354, 262144, 9, 2424890, 458752, 9, 2293819, 327680, 8, 2359355, 327680, 9, 2424891, 524288, 9, 2293820, 393216, 8, 2359356, 393216, 9, 2424892, 589824, 9, 2293821, 458752, 8, 2359357, 458752, 9, 2424893, 655360, 9, 2293822, 196608, 8, 2359358, 196608, 9, 2424894, 720896, 9, 2293823, 262144, 8, 2359359, 262144, 9, 2424895, 262144, 9, 2293824, 327680, 8, 2359360, 327680, 9, 2424896, 327680, 9, 2293825, 393216, 8, 2359361, 393216, 9, 2424897, 393216, 9, 2293826, 458752, 8, 2359362, 458752, 9, 2424898, 458752, 9, 2293827, 524288, 8, 2359363, 524288, 9, 2424899, 524288, 9, 2293828, 589824, 8, 2359364, 589824, 9, 2424900, 589824, 9, 2293829, 655360, 8, 2359365, 655360, 9, 2424901, 655360, 9, 2293830, 720896, 8, 2359366, 720896, 9, 2424902, 720896, 9, 2293831, 786432, 8, 2359367, 786432, 9, 2424903, 786432, 10, 2228271, 196608, 7, 2228272, 262144, 7, 2228273, 327680, 7, 2228274, 393216, 7, 2228275, 458752, 7, 2228276, 524288, 7, 2228277, 196608, 7, 2228278, 262144, 7, 2228279, 327680, 7, 2228280, 393216, 7, 2228281, 458752, 7, 2228282, 524288, 7, 2228283, 196608, 7, 2228284, 262144, 7, 2228285, 327680, 7, 2228286, 393216, 7, 2228287, 458752, 7, 2228288, 524288, 7, 2228289, 196608, 7, 2228290, 196608, 7, 2228291, 262144, 7, 2228292, 327680, 7, 2228293, 393216, 7, 2228294, 589824, 7, 2228295, 655360, 7, 2097222, 589824, 5, 2162758, 589824, 6, 2097223, 655360, 5, 2162759, 655360, 6, 2490415, 262144, 10, 2490416, 327680, 10, 2490417, 393216, 10, 2490418, 458752, 10, 2490419, 524288, 10, 2490420, 589824, 10, 2490421, 655360, 10, 2490422, 720896, 10, 2555951, 262144, 9, 2621487, 262144, 10, 2555952, 327680, 9, 2621488, 327680, 10, 2555953, 393216, 9, 2621489, 393216, 10, 2555954, 458752, 9, 2621490, 458752, 10, 2555955, 524288, 9, 2621491, 524288, 10, 2555956, 589824, 9, 2621492, 589824, 10, 2555957, 655360, 9, 2621493, 655360, 10, 2555958, 720896, 9, 2621494, 720896, 10, 2555959, 262144, 9, 2621495, 262144, 10, 2555960, 327680, 9, 2621496, 327680, 10, 2555961, 393216, 9, 2621497, 393216, 10, 2555962, 458752, 9, 2621498, 458752, 10, 2555963, 524288, 9, 2621499, 524288, 10, 2555964, 589824, 9, 2621500, 589824, 10, 2555965, 655360, 9, 2621501, 655360, 10, 2555966, 720896, 9, 2621502, 720896, 10, 2490423, 262144, 10, 2490424, 327680, 10, 2490425, 393216, 10, 2490426, 458752, 10, 2490427, 524288, 10, 2490428, 589824, 10, 2490429, 655360, 10, 2490430, 720896, 10, 2555967, 262144, 10, 2621503, 262144, 10, 2555968, 262144, 10, 2621504, 262144, 9, 2555969, 327680, 10, 2621505, 327680, 9, 2555970, 393216, 10, 2621506, 393216, 9, 2555971, 458752, 10, 2621507, 458752, 9, 2555972, 524288, 10, 2621508, 524288, 9, 2555973, 589824, 10, 2621509, 589824, 9, 2555974, 655360, 10, 2621510, 655360, 9, 2687039, 262144, 9, 2752575, 262144, 10, 2687040, 262144, 10, 2752576, 262144, 9, 2687041, 327680, 10, 2752577, 327680, 9, 2687042, 393216, 10, 2752578, 393216, 9, 2687043, 458752, 10, 2752579, 458752, 9, 2687044, 524288, 10, 2752580, 524288, 9, 2687045, 589824, 10, 2752581, 589824, 9, 2687046, 655360, 10, 2752582, 655360, 9, 2490431, 262144, 9, 2490432, 262144, 9, 2490433, 327680, 9, 2490434, 393216, 9, 2490435, 458752, 9, 2490436, 524288, 9, 2490437, 589824, 9, 2490438, 655360, 9, 2818111, 262144, 9, 2883647, 262144, 10, 2818112, 262144, 10, 2883648, 262144, 9, 2818113, 327680, 10, 2883649, 327680, 9, 2818114, 393216, 10, 2883650, 393216, 9, 2818115, 458752, 10, 2883651, 458752, 9, 2818116, 524288, 10, 2883652, 524288, 9, 2818117, 589824, 10, 2883653, 589824, 9, 2818118, 655360, 10, 2883654, 655360, 9, 2818103, 262144, 9, 2883639, 262144, 10, 2818104, 327680, 9, 2883640, 327680, 10, 2818105, 393216, 9, 2883641, 393216, 10, 2818106, 458752, 9, 2883642, 458752, 10, 2818107, 524288, 9, 2883643, 524288, 10, 2818108, 589824, 9, 2883644, 589824, 10, 2818109, 655360, 9, 2883645, 655360, 10, 2818110, 720896, 9, 2883646, 720896, 10, 2687031, 262144, 9, 2752567, 262144, 10, 2687032, 327680, 9, 2752568, 327680, 10, 2687033, 393216, 9, 2752569, 393216, 10, 2687034, 458752, 9, 2752570, 458752, 10, 2687035, 524288, 9, 2752571, 524288, 10, 2687036, 589824, 9, 2752572, 589824, 10, 2687037, 655360, 9, 2752573, 655360, 10, 2687038, 720896, 9, 2752574, 720896, 10, 2687023, 262144, 9, 2752559, 262144, 10, 2687024, 327680, 9, 2752560, 327680, 10, 2687025, 393216, 9, 2752561, 393216, 10, 2687026, 458752, 9, 2752562, 458752, 10, 2687027, 524288, 9, 2752563, 524288, 10, 2687028, 589824, 9, 2752564, 589824, 10, 2687029, 655360, 9, 2752565, 655360, 10, 2687030, 720896, 9, 2752566, 720896, 10, 2818095, 262144, 9, 2883631, 262144, 10, 2818096, 327680, 9, 2883632, 327680, 10, 2818097, 393216, 9, 2883633, 393216, 10, 2818098, 458752, 9, 2883634, 458752, 10, 2818099, 524288, 9, 2883635, 524288, 10, 2818100, 589824, 9, 2883636, 589824, 10, 2818101, 655360, 9, 2883637, 655360, 10, 2818102, 720896, 9, 2883638, 720896, 10, 2949167, 262144, 9, 3014703, 262144, 10, 2949168, 327680, 9, 3014704, 327680, 10, 2949169, 393216, 9, 3014705, 393216, 10, 2949170, 458752, 9, 3014706, 458752, 10, 2949171, 524288, 9, 3014707, 524288, 10, 2949172, 589824, 9, 3014708, 589824, 10, 2949173, 655360, 9, 3014709, 655360, 10, 2949174, 720896, 9, 3014710, 720896, 10, 2949175, 262144, 9, 3014711, 262144, 10, 2949176, 327680, 9, 3014712, 327680, 10, 2949177, 393216, 9, 3014713, 393216, 10, 2949178, 458752, 9, 3014714, 458752, 10, 2949179, 524288, 9, 3014715, 524288, 10, 2949180, 589824, 9, 3014716, 589824, 10, 2949181, 655360, 9, 3014717, 655360, 10, 2949182, 720896, 9, 3014718, 720896, 10, 2949183, 262144, 9, 3014719, 262144, 10, 2949184, 262144, 10, 3014720, 262144, 9, 2949185, 327680, 10, 3014721, 327680, 9, 2949186, 393216, 10, 3014722, 393216, 9, 2949187, 458752, 10, 3014723, 458752, 9, 2949188, 524288, 10, 3014724, 524288, 9, 2949189, 589824, 10, 3014725, 589824, 9, 2949190, 655360, 10, 3014726, 655360, 9, 2490439, 720896, 9, 2555975, 720896, 10, 2621511, 720896, 9, 2687047, 720896, 10, 2752583, 720896, 9, 2818119, 720896, 10, 2883655, 720896, 9, 2949191, 720896, 10, 3080256, 262144, 10, 3080257, 327680, 10, 3080258, 393216, 10, 3080259, 458752, 10, 3080260, 524288, 10, 3080261, 589824, 10, 3080262, 655360, 10, 3014727, 720896, 9, 3080263, 720896, 10, 2228224, 131072, 7, 2293760, 131072, 8, 2359296, 131072, 9, 2424832, 131072, 10, 2490368, 131072, 8, 2555904, 131072, 9, 2621440, 131072, 10, 2686976, 131072, 8, 2752512, 131072, 9, 2818048, 131072, 10, 2883584, 131072, 8, 2949120, 131072, 9, 3014656, 131072, 10)

[node name="jogador" parent="." instance=ExtResource("4_qt4wc")]
position = Vector2(385, 515)

[node name="opcao1_1" type="Area2D" parent="."]
script = ExtResource("5_qt4wc")

[node name="opcao1" type="Label" parent="opcao1_1"]
anchors_preset = -1
anchor_right = 0.355
anchor_bottom = 0.415
offset_left = 454.0
offset_top = 542.0
offset_right = 473.0
offset_bottom = 565.0
scale = Vector2(3, 3)
text = "25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="colisaoopcao1" type="CollisionShape2D" parent="opcao1_1"]
position = Vector2(479, 564)
shape = SubResource("RectangleShape2D_qt4wc")

[node name="opcao2_2" type="Area2D" parent="."]
script = ExtResource("6_kg7lx")

[node name="opcao2" type="Label" parent="opcao2_2"]
anchors_preset = -1
anchor_right = 0.355
anchor_bottom = 0.415
offset_left = 581.0
offset_top = 539.0
offset_right = 600.0
offset_bottom = 562.0
scale = Vector2(3, 3)
text = "27"
horizontal_alignment = 1
vertical_alignment = 1

[node name="colisaoopcao2" type="CollisionShape2D" parent="opcao2_2"]
position = Vector2(606, 562.25)
shape = SubResource("RectangleShape2D_kg7lx")

[node name="centralLabels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="conta" type="Label" parent="centralLabels"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.355
anchor_bottom = 0.415
offset_left = 749.0
offset_top = 365.0
offset_right = 802.0
offset_bottom = 388.0
scale = Vector2(3, 3)
text = "20 + 5?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="vidas" type="Label" parent="centralLabels"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="queda" type="Area2D" parent="."]
position = Vector2(169, 883)
script = ExtResource("7_rk7hk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="queda"]
position = Vector2(406.5, -102)
shape = SubResource("RectangleShape2D_cdxkg")

[connection signal="body_entered" from="opcao1_1" to="opcao1_1" method="_on_body_entered"]
[connection signal="body_entered" from="opcao2_2" to="opcao2_2" method="_on_body_entered"]
[connection signal="body_entered" from="queda" to="queda" method="_on_body_entered"]
